# Llamaindex_WebPageSummarization

./: .env  README.md  agent.mermaid  entry-points.json  input.json  main.py  pyproject.toml
.uipath/: .auth.json  .error_log  .telemetry.json  webpage_Summarizer.0.0.1.nupkg
__uipath/: state.db
